--- a/src/component/pages/Team/team.css
+++ b/src/component/pages/Team/team.css
@@ -19,6 +19,11 @@
     transition: 0.3s;
   }
 
+  .team-col{
+    padding-top:1.5rem ;
+    padding-bottom: 1rem;
+  }
+
   .card img {
     width: 100%;
     height: 70%;
