--- a/src/component/pages/HeroSection/heroSection.css
+++ b/src/component/pages/HeroSection/heroSection.css
@@ -2,7 +2,7 @@
   position: relative;
   
   /* background: ; */
-  background:rgba(0, 0, 0, 0.644) url(../../assets/photo-1594122230689-45899d9e6f69.jpg);
+  background:rgba(15, 0, 0, 0.712) url(../../assets/GalleryImage/10.JPG);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
