--- a/src/component/pages/WindowPeak/windowPeak.css
+++ b/src/component/pages/WindowPeak/windowPeak.css
@@ -1,6 +1,7 @@
  .window-peak {
-  background-image: url(https://web-images.credcdn.in/_next/assets/images/home-page/image-mock.jpg);
-  min-height:50vh;
+  background-color: rgba(15, 0, 0, 0.712);
+  background-image:url(../../assets/college.jpg);
+  min-height:70vh;
   background-attachment: fixed;
   background-position: center center;
   background-repeat: no-repeat;
