--- a/src/component/pages/HeroSection/heroSection.css
+++ b/src/component/pages/HeroSection/heroSection.css
@@ -2,15 +2,20 @@
   position: relative;
   
   /* background: ; */
-  background:rgba(15, 0, 0, 0.712) url(../../assets/GalleryImage/10.JPG);
+  /* background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5)),
+  url("../../media/examples/lizard.png"); */
+  background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../assets/GalleryImage/10.JPG);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
-
+.bg{
+background-color: rgba(0,0,0,0.7);
+}
 .hero-section {
   min-height: 100vh;
   text-align: center;
+  /* background-color: rgba(0, 0, 0, 0.7); */
 }
 
 .pre-Heading{
@@ -69,6 +74,12 @@
   .claim-anchor {
     margin-left: 0px;
   }
+  .pre-Heading{
+    color: var(--white-bg);
+    font-size: 28px;
+    font-weight: 700;
+    /* margin: 35px 58px; */
+  }
 }
 
 @media all and (max-width: 767px) {
@@ -95,5 +106,11 @@
   .claim-arrow {
     height: 6px;
     margin: 2px 0px 0px 3px;
+  }
+  .pre-Heading{
+    color: var(--white-bg);
+    font-size: 20px;
+    font-weight: 700;
+    /* margin: 35px 58px; */
   }
 }
