--- a/src/component/assets/styles/variables.css
+++ b/src/component/assets/styles/variables.css
@@ -1,6 +1,7 @@
 :root {
   --bg-primary: #000;    
   --text: #f8f8f8;
+  --primary-text: #ffe570;
   /* --mobile-box-shadow: #b0b0b229 0px -10px 3px 0px inset,
     #0000003d 2px 3px 3px 0.5px inset; */
   --bg-secondary: #2b2b2b;
@@ -12,4 +13,11 @@
   --bg-red: #ee2f4c;
   --bg-purple: rgb(90, 30, 203);
   --bg-blue: rgb(26, 97, 233);
+
+   --container-width-lg:85%;
+  --container-width-md:86%;
+  --container-width-sm:90%; 
+
+  --transition: all 400ms ease;
+
 }
