--- a/src/component/pages/HeroSection/heroSection.css
+++ b/src/component/pages/HeroSection/heroSection.css
@@ -114,3 +114,14 @@ background-color: rgba(0,0,0,0.7);
     /* margin: 35px 58px; */
   }
 }
+.scroll__down{
+  color:rgb(190, 190, 190);
+  position: absolute;
+  right:2.3rem;
+  bottom: 5rem;
+  transform: rotate(90deg);
+  font-weight: 300;
+  font-size: 0.9rem;
+
+}
+
