--- a/src/component/pages/Navbar/navbar.css
+++ b/src/component/pages/Navbar/navbar.css
@@ -35,6 +35,7 @@
     transform: translate(-40%, -35%);
     font-size: 1.8rem;
     color: white;
+    background: #fff;
    }
   /* a {
      font-family: "Poppins", sans-serif; 
