--- a/src/component/pages/Navbar/navbar.css
+++ b/src/component/pages/Navbar/navbar.css
@@ -26,16 +26,16 @@
     color: white;
   }
   .nav-logo-div2{
-    width: 15%;
+    width: 10%;
     height: auto;
     display: block;
     position: absolute;
     top: 10px;
     right: 0;
-    transform: translate(-40%, -35%);
+    transform: translate(-60%, -30%);
     font-size: 1.8rem;
     color: white;
-    background: #fff;
+    /* background: #fff; */
    }
   /* a {
      font-family: "Poppins", sans-serif; 
@@ -101,13 +101,14 @@
   .nav-menu.active {
     width: 20%;
     padding: 2rem 1rem 2rem 2rem;
-    background: var(--bg-secondary);
-    /* backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px); */
+    background: rgba(43, 43, 43);
+    top:0;
+    backdrop-filter: blur(10px);
+   /*  -webkit-backdrop-filter: blur(10px); */
     /* left: 23px; */
     opacity: 1;
     transition: all 0.5s ease;
-    z-index: 1;
+    z-index: 101;
     border: none;
     right: 0;
 }
@@ -158,8 +159,10 @@
     top: 0;
     right: 0;
     transform: translate(-100%, 60%);
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     color: white;
+    z-index: 1000;
+
   }
 
   @media screen and (max-width: 700px) {
