--- a/src/component/pages/contact/contact.css
+++ b/src/component/pages/contact/contact.css
@@ -43,7 +43,7 @@
     font-size: 0.8rem;
 }
 
-#contact form{
+/* #contact form{
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
@@ -57,7 +57,7 @@
     border: 2px solid var(--bg-secondary);
     resize: none;
     color: var(--color-white);
-}
+} */
 
 .contact-btn{
     width: max-content;
