--- a/src/component/assets/styles/commonClasses.css
+++ b/src/component/assets/styles/commonClasses.css
@@ -9,7 +9,7 @@
 .flex {
   display: flex;
 }
-.container{
+.dcontainer{
   margin-top: 4rem;
   margin-bottom: 3rem;
 }
@@ -29,6 +29,10 @@
   text-align: center;
   font-size:2rem ;
   margin-bottom: 1rem;
+  /* margin-top: 2rem; */
+}
+.space{
+  height: 60px;
 }
 
 .underline::after{
