--- a/src/component/pages/HeroSection/heroSection.css
+++ b/src/component/pages/HeroSection/heroSection.css
@@ -8,6 +8,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  margin-bottom: 2rem;
 }
 .bg{
 background-color: rgba(0,0,0,0.7);
