--- a/src/component/pages/Team/team.css
+++ b/src/component/pages/Team/team.css
@@ -5,7 +5,7 @@
     place-content: center;
 }
 
-.card {
+.card__ {
   background-color: var(--bg-secondary);
     width: 250px;
     height: 400px;
@@ -25,14 +25,14 @@
     padding-bottom: 1rem;
   }
 
-  .card img {
+  .card__ img {
     width: 100%;
     height: 70%;
     object-fit: cover;
   }
  
 
-  .card .cardTitle {
+  .card__ .card__Title {
     /* color: rgb(190, 190, 190); */
     /* padding: 10px; */
     margin: 0;
@@ -42,7 +42,7 @@
     /* color: #333; */
   }
 
-  .card .cardText{
+  .card__ .card__Text{
     color: rgb(190, 190, 190);
     padding: 0 10px;
     font-weight: 500;
@@ -52,7 +52,7 @@
     
   }
 
-  .card:hover {
+  .card__:hover {
     box-shadow: 0 8px 16px 0 rgba(226, 195, 195, 0.2);
   }
   
