--- a/src/component/pages/WindowPeak/windowPeak.css
+++ b/src/component/pages/WindowPeak/windowPeak.css
@@ -1,7 +1,7 @@
  .window-peak {
   background-color: rgba(15, 0, 0, 0.712);
-  background-image:url(../../assets/college.jpg);
-  min-height:70vh;
+  background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),url(../../assets/college.jpg);
+  min-height:50vh;
   background-attachment: fixed;
   background-position: center center;
   background-repeat: no-repeat;
