--- a/src/component/pages/footer/footer.css
+++ b/src/component/pages/footer/footer.css
@@ -7,9 +7,10 @@
     
 }
 .container-footer a{
+    text-decoration: none;
     color: #fff;
 }
-.row-upper{
+.row-upper-f{
     display:grid;
     grid-template-columns: 1fr 1fr;
     grid-gap:2rem;
@@ -26,17 +27,19 @@
 .inif {
 margin:auto;
 }
-.col-upper{
+.col-upper-f{
     padding: 10px 30px;
     margin: 10px;
 }
-.subscribe-btn{
+.subscribe-btn-f{
+    border: none;
+    background-color: var(--primary-text);
     font-size: 18px;
     /* padding: 3px; */
     /* color: #fff; */
 }
 
-.col-upper input{
+.col-upper-f input{
     width: 80%;
     margin-top: 18px;
     border: none;
@@ -44,29 +47,29 @@ margin:auto;
     font-size: 18px;
     color: rgb(190, 190, 190);
 }
-.col-upper input:focus{
+.col-upper-f input:focus{
     outline: none;
 }
-.col-upper span{
+.col-upper-f span{
     margin-top: 0.3rem ;
     padding: .2rem;
 }
 
-.col-upper span .form-flex{
+.col-upper-f span .form-flex{
     display: flex;
     justify-content: space-between;
     border-bottom: 2px solid white;
     padding: 0 0 10px 0;
 }
-.col-upper p{
+.col-upper-f p{
     font-size: .7rem;
 }
-.col-upper h2{
+.col-upper-f h2{
     font-size: 1rem;
     /* margin: .3rem; */
 }
 
-.row-bottom{
+.row-bottom-f{
     margin: 0.5em;  
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -74,7 +77,7 @@ margin:auto;
     /* padding: 20px 0 0; */
     text-align: center;
 }
-.col-bottom{
+.col-bottom-f{
     padding: 10px 30px;
     margin: 10px;
 }
@@ -95,33 +98,33 @@ li:hover{
     transform: scale(1.1);    
 }
 
-.col-bottom h4{
+.col-bottom-f h4{
     font-size: 1rem;
 }
-.col-bottom p{
+.col-bottom-f p{
     padding: 10px 0;
     font-size: .7rem;
 }
-.col-bottom span{
+.col-bottom-f span{
     font-size: 1.8rem;
     margin: .3rem;
     
 }
 @media screen and (max-width:1024px) {
-    .row-upper{
+    .row-upper-f{
         grid-template-columns: 1fr 1fr;
         gap:1.2rem
        
     }    
-    .row-bottom{
+    .row-bottom-f{
         grid-template-columns: 1fr 1fr;
         gap:1.2rem
        
     }    
-    .col-upper p{
+    .col-upper-f p{
         font-size: 1.2rem;
     }
-    .col-upper h2{
+    .col-upper-f h2{
         font-size: 1.5rem;
     }
     .subscribe-btn{
@@ -129,17 +132,17 @@ li:hover{
         /* padding: 3px; */
         /* color: #fff; */
     }
-    .col-upper input{
+    .col-upper-f input{
         margin-top: 1rem;
         border: none;
         background: var(--bg-secondary);
         font-size: 12px;
         color: #fff;
     }
-    .col-upper span{
+    .col-upper-f span{
         width: 70%;
     }
-    .col-upper span .form-flex{
+    .col-upper-f span .form-flex{
         justify-content: space-between;
         border-bottom: 2px solid white;
         padding: 0 0 10px 0;
@@ -151,7 +154,7 @@ li:hover{
     /* ======== MEDIA QUERIES(Small DEVICES)====== */
     
       @media screen and (max-width:600px) {
-        .row-upper{
+        .row-upper-f-f{
         grid-template-columns: 1fr;
         gap:1rem;
     }
