--- a/src/component/pages/Events/event.css
+++ b/src/component/pages/Events/event.css
@@ -4,12 +4,18 @@
     grid-gap: 20px;
     /* max-width: 85vw; */
 }
+.events_cont{
+  /* background: rgb(233, 225, 0); */
+  background-image: url(../../assets/bg/pattern.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 20px;
+}
 
-.event_card {
+/* .event_card {
   background-color: var(--bg-secondary);
   width: auto;
-    /* width: 400px; */
-    /* height: 400px; */
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     border-radius: 5px;
@@ -19,23 +25,21 @@
     display: flex;
     justify-content: center;
     transition: 0.3s;
-  }
-
+  } */
+/* 
   .card img {
     width: 100%;
     height: 70%;
     object-fit: cover;
   }
- 
-
+  */
+/* 
   .event_card .cardTitle {
     padding: .7rem .7rem 0;
-    /* margin: 0; */
     font-size: 1.7rem;
     text-align: center;
-    /* color: #333; */
-  }
-
+  } */
+/* 
   .event_card .cardText {
      padding: .2rem .7rem .5rem; 
     font-size: 16px;
@@ -57,13 +61,12 @@
     font-size: 20px;
     margin: 0 10px;
     
-   }
-    .event_card_icon:hover{
-      /* color: #226396; */
+   } */
+    /* .event_card_icon:hover{
       font-size: 24px;
       margin: 0 10px;
       transition: 0.1s;
-    }
+    } */
 
   /* ======== MEDIA QUERIES(MEDIUM DEVICES)====== */
 @media screen and (max-width:1024px) {
@@ -84,3 +87,118 @@
     }
 
     }
+
+
+
+    /*=================== new css======== */
+
+
+    /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.container{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;
+}
+.flip-card {
+  /* width: auto; */
+  /* background-color: transparent; */
+  width: 300px;
+  height: 450px;
+  /* border: 1px solid #f1f1f1; */
+  /* perspective: 1000px; */
+  
+  margin: 20px auto;
+  /* Remove this if you don't want the 3D effect */
+}
+/* src/card.css */
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  /* background-color: #bbb; */
+  color: var(--text);
+
+  /* Add this if you want a 3D effect */
+  background: rgba( 255, 255, 255, 0.25 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 3.5px );
+-webkit-backdrop-filter: blur( 3.5px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );  
+display: flex;
+flex-direction: column;
+  /* justify-content: space-evenly; */
+padding: 2rem;
+}
+
+.cardiconfront{
+  margin: 0 auto;
+  height: 100px;
+  width: 100px;
+}
+.cardiconfront img{
+  height: 100%;
+  width: 100%;
+}
+
+.flip-card-front h1{
+  margin-top: 20px;
+  padding: .7rem .7rem 0;
+  font-size: 1.7rem;
+  display: flex;
+  justify-content: center;
+  /* text-align: center; */
+  vertical-align: middle;
+  line-height: normal;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+/* Style the back side */
+.flip-card-back {
+  /* background-color: dodgerblue; */
+  /* color: rgb(71, 12, 12); */
+  transform: rotateY(180deg);
+  /* Add this if you want a 3D effect */
+  background: rgba( 255, 255, 255, 0.25 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 3.5px );
+-webkit-backdrop-filter: blur( 3.5px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
+padding: 0 10px;
+font-weight: 500;
+font-size: 15px;
+text-align: center;
+}
+
+.flip-card-back  p{
+  font-size: 15px;
+  padding: 1rem;
+  text-align: center;
+  color: var(--text1);
+  font-weight: 600;
+  text-align: justify;
+}
