--- a/src/component/pages/HeroSection/heroSection.css
+++ b/src/component/pages/HeroSection/heroSection.css
@@ -1,15 +1,27 @@
 .hero-section-wrapper {
   position: relative;
-  background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../assets/GalleryImage/10.JPG);
+  /* background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../assets/GalleryImage/10.JPG); */
   margin-bottom: 2rem;
   min-height:100vh;
-  background-attachment: fixed;
+  /* background-attachment: fixed;
   background-position: center center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
 }
-.bg{
-background-color: rgba(0,0,0,0.7);
+.bg_hero{
+position: absolute;
+/* top: 0; */
+right: 0;
+bottom: 1rem;
+height: 600px;
+width: 600px;
+z-index: -2;
+}
+.bg_hero img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 .hero-section {
   min-height: 100vh;
@@ -18,25 +30,40 @@ background-color: rgba(0,0,0,0.7);
 }
 
 .pre-Heading{
-  color: var(--white-bg);
+  /* color: var(--white-bg); */
+  /* color: var(--white-bg); */
+  color: var(--text);
   font-size: 24px;
   font-weight: 700;
   /* margin: 35px 58px; */
 }
 .hero-heading {
-  color: var(--white-bg);
+  color: var(--text);
   font-size: 84px;
   font-weight: 700;
 }
 
 .hero-subheading {
-  color: var(--white-bg);
+  color: var(--text);
   line-height: 38px;
   font-size: 30px;
   font-weight: 700;
   margin: 35px 58px;
 }
-
+.entrepreneurship{
+  position: relative;
+}
+.entrepreneurship::after{
+  content: "";
+  position: absolute;
+  display: block;
+  height: 8px;
+  bottom: 16px;
+  left: 0px;
+  width: 100%;
+  background-color:var(--text4);
+  z-index: -1;
+}
 .hero-claim-label {
   background-color: var(--bg-gray);
   width: 100%;
@@ -74,7 +101,7 @@ background-color: rgba(0,0,0,0.7);
     margin-left: 0px;
   }
   .pre-Heading{
-    color: var(--white-bg);
+    color: var(--text);
     font-size: 28px;
     font-weight: 700;
     /* margin: 35px 58px; */
@@ -107,7 +134,7 @@ background-color: rgba(0,0,0,0.7);
     margin: 2px 0px 0px 3px;
   }
   .pre-Heading{
-    color: var(--white-bg);
+    color: var(--text);
     font-size: 20px;
     font-weight: 700;
     /* margin: 35px 58px; */
