--- a/src/component/pages/Navbar/navbar.css
+++ b/src/component/pages/Navbar/navbar.css
@@ -14,7 +14,7 @@
     padding: 1rem 0 1rem 0;
   }
   .solid-nav {
-    background-color: #000;
+    background-color: #fff;
     transition: background-color 0.2s linear;
   }
   .nav-logo-div1{
@@ -99,12 +99,17 @@
     right: -110%;
     opacity: 1;
     transition: all 0.5s ease;
+
+      /* blureffect */
+
+      
+
   }
 
   .nav-menu.active {
     width: 20%;
     padding: 2rem 1rem 2rem 2rem;
-    background:#2b2b2b;
+    /* background:#2b2b2b; */
     top:0;
     backdrop-filter: blur(10px);
    /*  -webkit-backdrop-filter: blur(10px); */
@@ -114,6 +119,16 @@
     z-index: 101;
     border: none;
     right: 0;
+
+    /* blureffect */
+
+    background: rgba( 255, 255, 255, 0.9 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 16.5px );
+    -webkit-backdrop-filter: blur( 16.5px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+
 }
   .nav-menu.active img {
     max-width: 60% !important;
@@ -163,7 +178,7 @@
     right: 0;
     transform: translate(-100%, 60%);
     font-size: 1.5rem;
-    color: white;
+    color: #000;
     z-index: 1000;
 
   }
@@ -258,7 +273,7 @@
       right: 0;
       transform: translate(-100%, 60%);
       font-size: 1.8rem;
-      color: white;
+      color: #000;
     }  
   }
   
