--- a/src/component/pages/contact/contactus.css
+++ b/src/component/pages/contact/contactus.css
@@ -12,7 +12,7 @@
     /* background: ; */
     /* background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5)),
     url("../../media/examples/lizard.png"); */
-    background:linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../../assets/bg/diarybg.jpg);
+    /* background:linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../../assets/bg/diarybg.jpg); */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
