--- a/src/component/pages/mentorMassage/massage.css
+++ b/src/component/pages/mentorMassage/massage.css
@@ -26,7 +26,8 @@
 
 .massage-text{
     margin: 2rem;
-    color: rgb(190, 190, 190);
+    color: var(--text1);
+    font-weight: 500;
     text-align: justify;
 }
 
