--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @import "./component/assets/styles/commonClasses.css";
 @import "./component/assets/styles/variables.css";
 @import "./component/assets/styles/animations.css";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 html{
   scroll-behavior: smooth;
@@ -12,14 +13,16 @@ a{
 }
 body {
   margin: 0;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  /* font-family: 'Kanit', sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
   
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: var(--bg-primary);;
+  /* background: var(--bg-primary); */
+  background-color: #fff;
   /* color: #ffffd8; */
   color: var(--primary-text);
 }
