--- a/src/component/assets/styles/variables.css
+++ b/src/component/assets/styles/variables.css
@@ -5,7 +5,8 @@
   --text2: #FFBD59;
   --text3: #48719e;
   --text4: #e9e100;
-  --primary-text: #48719e;
+  --primary-text: #36d7b7;
+  /* --primary-text: #48719e; */
   --bg-secondary: #2b2b2b;
   --white-bg: #f8f8f8;
   --bg-green: #027757;
