--- a/src/component/pages/About/about.css
+++ b/src/component/pages/About/about.css
@@ -13,3 +13,77 @@
 .text{
     color: var(--text1);
 }
+
+
+/* card Mission vision */
+.mission_vision{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+  }
+.moto{
+    margin:3rem auto;
+  width: 380px;
+  height: 450px;
+  /* background: rgba( 255, 255, 255, 0.25 ); */
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+/* backdrop-filter: blur( 3.5px );
+-webkit-backdrop-filter: blur( 3.5px ); */
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
+padding: 0 10px;
+font-weight: 500;
+font-size: 15px;
+text-align: center;
+
+}
+.moto_img{
+    display: flex;
+    justify-content: center;
+}
+.moto_text h1{
+    font-size: 1.5rem;
+    color: var(--text1);
+    position: relative;
+}
+.moto_text h1::after{
+     content: "";
+    position: absolute;
+    display: block ;
+    
+    height: 4px;
+    bottom: 2px;
+    left: 130px;
+    width: 28%;
+    background-color:var(--text4);
+    z-index: -1;
+  }
+
+
+.list ul li{
+    list-style: disc;
+    margin: 1rem;
+    font-size: .75rem;
+    color: var(--text1);
+}
+
+  /* ======== MEDIA QUERIES(MEDIUM DEVICES)====== */
+  @media screen and (max-width:1024px) {
+    .mission_vision{
+        grid-template-columns: 1fr;
+        gap:1rem
+       
+    }    
+     
+} 
+    
+    /* ======== MEDIA QUERIES(Small DEVICES)====== */
+    
+      @media screen and (max-width:600px) {
+    .mission_vision{
+        grid-template-columns: 1fr;
+        gap:1rem;
+    }
+
+    }
+
