--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* background: var(--bg-primary); */
-  background-color: #fff;
+  background-color: #f3f4f6;
   /* color: #ffffd8; */
   color: var(--primary-text);
 }
