--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,7 @@ html{
   scroll-behavior: smooth;
 }
 a{
-  color:#ffe570;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 body {
   margin: 0;
@@ -49,4 +48,17 @@ body {
   color: var(--color-green);
   background-color: #000;
   border: 0.5px solid var(--color-green);
+}
+
+
+/* #onscroll reveal effect */
+.visible {
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 0.5s, transform 0.5s;
+}
+
+#on-scroll-reveal {
+  opacity: 0;
+  transform: translateY(100px);
 }
