--- a/src/component/assets/styles/commonClasses.css
+++ b/src/component/assets/styles/commonClasses.css
@@ -10,8 +10,8 @@
   display: flex;
 }
 .dcontainer{
-  margin-top: 4rem;
-  margin-bottom: 3rem;
+  /* margin-top: 4rem; */
+  /* margin-bottom: 3rem; */
 }
 
 .absolute-center {
