--- a/src/component/pages/About/about.css
+++ b/src/component/pages/About/about.css
@@ -23,7 +23,7 @@
   }
 .moto{
     margin:3rem auto;
-  width: 380px;
+  width: 360px;
   height: 450px;
   /* background: rgba( 255, 255, 255, 0.25 ); */
 box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
@@ -86,4 +86,11 @@ text-align: center;
     }
 
     }
-
+    @media only screen and (max-width: 1200px) and (min-width: 1024px) {
+        .mission_vision{
+            grid-template-columns: 1fr 1fr;
+            gap:1rem
+           
+        }    
+         
+    } 
