--- a/src/component/pages/Events/event.css
+++ b/src/component/pages/Events/event.css
@@ -1,17 +1,130 @@
-.event_card_container{
+.event_herosection{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr;
     grid-gap: 20px;
     /* max-width: 85vw; */
+    position: relative;
+    height: 100vh;
 }
-.events_cont{
-  /* background: rgb(233, 225, 0); */
-  background-image: url(../../assets/bg/pattern.png);
+.event_herosection{
+  background-image: url(../../assets/bg/bgevet.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   padding: 20px;
 }
+.event_heroText h1{
+position: absolute;
+width: 321px;
+height: 115px;
+left: 100px;
+top: 321px;
+font-style: normal;
+font-weight: 600;
+font-size: 96px;
+line-height: 115px;
+letter-spacing: 0.05em;
+}
+
+.event_heroText h6{
+position: absolute;
+width: 163px;
+height: 29px;
+left: 105px;
+top: 304px;
+
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 29px;
+letter-spacing: 0.1rem; 
+}
+
+.event_herosection .event_heroImg{
+  height: 520px;
+}
+
+.event_herosection .event_heroImg img{
+  height: 100%;
+}
+
+.eventList{
+  
+  margin:3rem auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Eventcard {
+  position: relative;
+  width: 90%;
+  height: 500px;
+  overflow: hidden;
+}
+
+.Eventcard img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: rgba(0,0,0,0.6);
+  /* color: #fff; */
+color: var(--primary-text);
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+.Eventcard:hover .overlay {
+  opacity: 1;
+}
+.Eventtext {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #fff;
+  z-index: 1;
+}
+.overlay h1 {
+  font-size: 40px;
+  font-weight: 600;
+  text-align: center;
+  padding: 20px;
+}
+
+.Eventtext .button {
+  background-color: #36d7b7;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+.Eventtext .button:hover {
+  background-color: #fff;
+  color: #36d7b7;
+}
+
+
+/* .events_cont{
+ 
+  background-image: url(../../assets/bg/pattern.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 20px;
+} */
 
 /* .event_card {
   background-color: var(--bg-secondary);
@@ -69,49 +182,44 @@
     } */
 
   /* ======== MEDIA QUERIES(MEDIUM DEVICES)====== */
-@media screen and (max-width:1024px) {
+/* @media screen and (max-width:1024px) {
     .event_card_container{
         grid-template-columns: 1fr 1fr;
         gap:1.2rem
        
     }    
      
-} 
+}  */
     
     /* ======== MEDIA QUERIES(Small DEVICES)====== */
     
-      @media screen and (max-width:600px) {
+      /* @media screen and (max-width:600px) {
     .event_card_container{
         grid-template-columns: 1fr;
         gap:1rem;
     }
 
     }
-
+ */
 
 
     /*=================== new css======== */
 
 
     /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
-.container{
+/* .container{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 20px;
 }
 .flip-card {
-  /* width: auto; */
-  /* background-color: transparent; */
+
   width: 300px;
   height: 450px;
-  /* border: 1px solid #f1f1f1; */
-  /* perspective: 1000px; */
-  
+
   margin: 20px auto;
-  /* Remove this if you don't want the 3D effect */
+  
 }
-/* src/card.css */
-/* This container is needed to position the front and back side */
 .flip-card-inner {
   position: relative;
   width: 100%;
@@ -121,26 +229,24 @@
   transform-style: preserve-3d;
 }
 
-/* Do an horizontal flip when you move the mouse over the flip box container */
 .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
 }
 
-/* Position the front and back side */
+
 .flip-card-front, .flip-card-back {
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari */
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-}
+} */
 
 /* Style the front side (fallback if image is missing) */
-.flip-card-front {
-  /* background-color: #bbb; */
+/* .flip-card-front {
+
   color: var(--text);
 
-  /* Add this if you want a 3D effect */
   background: rgba(255, 255, 255, 0.088);
 box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.19);
 backdrop-filter: blur( 3.5px );
@@ -149,10 +255,10 @@ border-radius: 10px;
 border: 1px solid rgba( 255, 255, 255, 0.18 );  
 display: flex;
 flex-direction: column;
-  /* justify-content: space-evenly; */
+  
 padding: 2rem;
-}
-
+} */
+/* 
 .cardiconfront{
   margin: 0 auto;
   height: 100px;
@@ -161,27 +267,25 @@ padding: 2rem;
 .cardiconfront img{
   height: 100%;
   width: 100%;
-}
+} */
 
-.flip-card-front h1{
+/* .flip-card-front h1{
   margin-top: 20px;
   padding: .7rem .7rem 0;
   font-size: 1.7rem;
   display: flex;
   justify-content: center;
-  /* text-align: center; */
+ 
   vertical-align: middle;
   line-height: normal;
   display: inline-block;
   vertical-align: middle;
-}
+} */
 
-/* Style the back side */
-.flip-card-back {
-  /* background-color: dodgerblue; */
-  /* color: rgb(71, 12, 12); */
+/* .flip-card-back {
+
   transform: rotateY(180deg);
-  /* Add this if you want a 3D effect */
+  
   background: rgba( 255, 255, 255, 0.25 );
 box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
 backdrop-filter: blur( 3.5px );
@@ -192,13 +296,13 @@ padding: 0 10px;
 font-weight: 500;
 font-size: 15px;
 text-align: center;
-}
+} */
 
-.flip-card-back  p{
+/* .flip-card-back  p{
   font-size: 15px;
   padding: 1rem;
   text-align: center;
   color: var(--text1);
   font-weight: 600;
   text-align: justify;
-}
+} */
