--- a/src/component/pages/PitchIdea/overlay.css
+++ b/src/component/pages/PitchIdea/overlay.css
@@ -47,6 +47,9 @@
   .startup-form h1{
     font-size: 24px;
   }
+  .startup-form h2{
+    font-size: 20px;
+  }
   
   .startup-form label {
     display: block;
@@ -66,7 +69,7 @@
   
   .startup-form button {
     margin-top: 10px;
-    padding: 8px 16px;
+    padding: 6px 12px; /* Reduce button size */
     background-color: #007bff;
     color: #fff;
     border: none;
@@ -75,8 +78,8 @@
   }
   
   .startup-form button[type="button"] {
-    margin-left: 10px;
-    background-color: #dc3545;
+    /* margin-left: 10px; */
+    /* background-color: #dc3545; */
   }
   
   .startup-form button[type="submit"] {
@@ -86,4 +89,42 @@
   .startup-form button:hover {
     opacity: 0.8;
   }
-  
+  .addmember{
+    background-color: #36d7b7;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    font-size:20px;
+    margin: auto;
+  }
+  .btn-sub{
+    /* display: flex;
+    justify-content: space-between;
+    text-align: center;
+    align-items: center;*/
+    font-size:20px;
+    margin: auto; 
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+
+  }
+  .btn-sub  button[type="submit"] {
+    /* background-color: #28a745; */
+    
+    margin: 10px auto 0;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+  }
+  .btn-sub button[type="button"] {
+    /* background-color: #28a745; */
+    background-color: #dc3545;
+    margin: 10px auto 0;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+  }
