--- a/src/component/pages/Events/event.css
+++ b/src/component/pages/Events/event.css
@@ -113,7 +113,7 @@ color: var(--primary-text);
 }
 
 .Eventtext .button {
-  background-color: #36d7b7;
+  background-color:var(--primary-text);
   color: #fff;
   border: none;
   padding: 10px 20px;
