--- a/src/component/pages/footer/footer.css
+++ b/src/component/pages/footer/footer.css
@@ -11,14 +11,20 @@
     color: var(--text1);
 }
 .row-upper-f{
-    display:grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap:2rem;
-    
+    margin: 0.5em 0.5em 0 0.5em;  
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 1.5rem;
+    /* padding: 20px 0 0; */
+    text-align: center;
 }
 .col-logo{
     margin:auto;
-    width: 250px;
+    width: 200px;
+}
+.col-logo span{
+    padding: 0;
+    margin: auto;
 }
 .col-logo img{
     width: 100%;
@@ -72,30 +78,41 @@ margin:auto;
 } */
 .col-upper-f p{
     font-size: .7rem;
+    color: var(--text1);
+    font-weight: 600;
+    margin: auto;
 }
 .col-upper-f h2{
+    line-height: 1.2;
     font-size: 1rem;
     /* margin: .3rem; */
 }
 
-.row-bottom-f{
+/* .row-bottom-f{
     margin: 0.5em;  
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 1.5rem;
-    /* padding: 20px 0 0; */
+    padding: 20px 0 0;
     text-align: center;
-}
+} */
 .col-bottom-f{
     padding: 10px 30px;
     margin: 10px;
 }
+.col-bottom-f p{
+    /* padding: 10px 30px; */
+    margin: 10px;
+    text-align: center;
+}
+
 .permalinks{
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 0.1rem;
     margin: 1rem auto 1rem;
+    padding: 0  ;
 }
 ul{
     list-style-type: none;
@@ -109,6 +126,7 @@ li:hover{
 
 .col-bottom-f h4{
     font-size: 1rem;
+    text-align: center;
 }
 .col-bottom-f p{
     padding: 10px 0;
