--- a/src/component/pages/Team/team.css
+++ b/src/component/pages/Team/team.css
@@ -4,6 +4,7 @@
     grid-gap: 20px;
     place-content: center;
 }
+
 /* .bg_team{
   position: relative;
   background:linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../../assets/bg/_MG_8247.JPG);
@@ -91,6 +92,11 @@
         gap:1.2rem
        
     }    
+    .textcard_container{
+        grid-template-columns: 1fr 1fr;
+        gap:1.2rem
+       
+    }    
      
 } 
     
@@ -103,3 +109,60 @@
     }
 
     }
+
+    /* text card*/
+  
+    .Textcard_container{
+      /* display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-gap: 20px;
+      place-content: center; */
+
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 1rem;
+      /* max-width: 1400 ; */
+      margin: 0 auto;
+      padding: 0 1rem;
+      box-shadow: rgba(9,30,66,.25) 0px 54px 55px,
+      rgba(9,30,66,.12) 0px -12px 30px,
+  }
+
+  .textcard {
+      width: 300px;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      overflow: hidden;
+  }
+  
+  .textcard-header {
+      /* background-color: #007bff; */
+      /* color: #fff; */
+      text-align: center;
+      padding: 10px;
+      margin: 0;
+  }
+  
+  .textcard-header h2 {
+      margin: 0;
+      font-size: 18px;
+  }
+  
+  .textcard-header p {
+      margin: 0;
+      font-size: 14px;
+  }
+  
+  .textcard-body {
+    text-align: center;
+      padding: 10px;
+  }
+  
+  .textcard-body p {
+      margin: 0;
+      font-size: 14px;
+  }
+  
