--- a/src/component/pages/contact/contactus.css
+++ b/src/component/pages/contact/contactus.css
@@ -49,17 +49,20 @@
     justify-content: space-between;
     box-shadow: 0 20px 25px rgba(0, 0, 0, 0.15);
     border-radius: 22px;
+    color: #fff;
   }
   
   .contact_container .contactInfo h2 {
-    color: var(--bg-secondary);
+    /* color: var(--bg-secondary); */
     font-size: 24px;
     font-weight: 500;
+    color: #fff;
   }
   
   .contact_container .contactInfo ul.info {
     position: relative;
     margin: 20px 0;
+    
   }
   
   .contact_container .contactInfo ul.info li {
@@ -69,16 +72,19 @@
     margin: 20px 0;
     cursor: pointer;
     align-items: flex-start;
+    color: #fff;
   }
   
   .contact_container .contactInfo ul.info li span:nth-child(1) {
     width: 30px;
     min-width: 30px;
+
   }
   
   /* for gmail */
   .contact_container .contactInfo ul.info li span a {
-    color: var(--bg-secondary);
+    /* color: var(--bg-secondary); */
+    color: #fff;
     text-decoration: none;
     width: 30px;
     min-width: 30px;
@@ -93,7 +99,8 @@
   }
   
   .contact_container .contactInfo ul.info li span:nth-child(2) {
-    color: var(--bg-secondary);
+    /* color: var(--bg-secondary); */
+    color: #fff;
     margin-left: 10px;
     font-weight: 300;
   }
@@ -123,7 +130,8 @@
     margin-left: 150px;
     width: calc(100% - 150px);
     height: 100%;
-    background: var(--bg-secondary);
+    /* background: var(--bg-secondary); */
+    background: #fae099;
     box-shadow: 0 50px 50px rgba(0, 0, 0, 0.25);
     border-radius: 22px;
   }
@@ -158,7 +166,8 @@
   .contact_container .contactForm .formBox .inputBox input,
   .contact_container .contactForm .formBox .inputBox textarea {
     width: 100%;
-    background: var(--bg-secondary);
+    /* background: var(--bg-secondary); */
+    background: #fae099;
     resize: none;
     padding: 5px 0;
     font-size: 18px;
@@ -173,7 +182,9 @@
     height: 120px;
   }
   .contact_icon{
-    color: var(--bg-secondary);
+    /* color: var(--bg-secondary);
+     */
+     color: #fff;
   }
   .contact_container .contactForm .formBox .inputBox span {
     position: absolute;
@@ -203,7 +214,9 @@
     cursor: pointer;
     background: var(--primary-text);
     border-radius: 20px;
-    color: var(--bg-secondary);
+    /* color: var(--bg-secondary);
+     */
+     color: #fff;
     border: none;
     max-width: 150px;
     padding: 12px;
@@ -289,6 +302,7 @@
       padding: 25px;
       flex-direction: column;
       align-items: flex-start;
+      
     }
   
     .contact_container .contactInfo ul.sci {
