--- a/src/component/pages/Team/team.css
+++ b/src/component/pages/Team/team.css
@@ -119,12 +119,13 @@
       place-content: center; */
 
       display: flex;
-      flex-direction: row;
+      /* flex-direction: row; */
       justify-content: center;
+    align-items: center;
       flex-wrap: wrap;
       gap: 1rem;
       /* max-width: 1400 ; */
-      margin: 0 auto;
+      margin: 0 1rem;
       padding: 0 1rem;
       box-shadow: rgba(9,30,66,.25) 0px 54px 55px,
       rgba(9,30,66,.12) 0px -12px 30px,
@@ -136,6 +137,7 @@
       border-radius: 8px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       overflow: hidden;
+      margin: 0 2rem;
   }
   
   .textcard-header {
