--- a/src/component/pages/Team/team.css
+++ b/src/component/pages/Team/team.css
@@ -32,6 +32,11 @@
   padding-bottom: 1rem;
 }
 
+.card_row{
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+}
 .card__ img {
   width: 100%;
   height: 70%;
