--- a/src/component/pages/card/card.css
+++ b/src/component/pages/card/card.css
@@ -3,6 +3,10 @@
     background: #000;
     position: relative
 }
+
+box-6>img{
+    height: 284px;
+}
 .Tcard_container{
     display: flex;
     flex-direction: row;
